modified the code

--- a/code/churn_hackathon_hints.ipynb
+++ b/code/churn_hackathon_hints.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hint: data['column_name'].hist() returns the distribution for that feature\n"
+    "#hint: sns.distplot(\"Feature\") returns the distribution for that feature\n"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hint y=data.Churn x_features=data.drop(['What columns should we drop?'],axis=1)\n"
+    "#hint y=data.Churn x_features=data.drop(columns=['What columns should we drop?'])\n"
    ]
   },
   {
