changed the read_csv line

--- a/code/churn_hackathon_hints2.ipynb
+++ b/code/churn_hackathon_hints2.ipynb
@@ -62,8 +62,8 @@
    "source": [
     "# Load the churn dataset\n",
     "#hint:data = pd.read_csv(\"what is the file location? look at previous examples\")\n",
-    "#data=pd.read_csv('/content/churn_cleaned.csv')\n",
-    "data=pd.read_csv('./churn_cleaned.csv')"
+    "data=pd.read_csv('/content/churn_cleaned.csv')\n",
+    "#data=pd.read_csv('./churn_cleaned.csv')"
    ]
   },
   {
