--- a/code/churn_hackathon_hints2.ipynb
+++ b/code/churn_hackathon_hints2.ipynb
@@ -1042,6 +1042,34 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Step8b: Visualize The Tree (optional)</h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.externals.six import StringIO  \n",
+    "from IPython.display import Image  \n",
+    "from sklearn.tree import export_graphviz\n",
+    "import pydotplus\n",
+    "dot_data2 = StringIO()\n",
+    "export_graphviz(rf_model.estimators_[1],  #change the number to look at a different tree\n",
+    "                out_file=dot_data2,\n",
+    "                filled=True,\n",
+    "                precision=2,\n",
+    "                feature_names=x_train.columns,\n",
+    "                rounded=True)\n",
+    "graph = pydotplus.graph_from_dot_data(dot_data2.getvalue())  \n",
+    "Image(graph.create_png())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "WKoDqcIgxbLp"
